Add new web apps to index and backlinks

--- a/web_apps/dico_module_map_d3.html
+++ b/web_apps/dico_module_map_d3.html
@@ -286,6 +286,7 @@
       </div>
 
       <div class="controls">
+        <a class="btn" href="../index.html">Back to Card Index</a>
         <div class="search" title="Search modules (e.g., 'Entities', 'BFO', 'SOSA')">
           <span class="muted">🔎</span>
           <input id="searchBox" type="text" placeholder="Search modules…" />
