--- a/web_apps/legends_tower_sentiment_report.html
+++ b/web_apps/legends_tower_sentiment_report.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+  <p><a href="../index.html">Back to Card Index</a></p>
   <h1>Stakeholder Sentiment – Legends Tower (Boardwalk at Bricktown)</h1>
   <p class="muted">
     Interactive summary of sentiment extracted from selected <b>news</b> and <b>social-media</b> items about the proposed
