--- a/web_apps/project_time_exchange_explainer.html
+++ b/web_apps/project_time_exchange_explainer.html
@@ -60,6 +60,7 @@
           <div class="tag">Project Time Exchange · Explainer · v1</div>
         </div>
         <div class="btns">
+          <a class="btn" href="../index.html">Back to Card Index</a>
           <a class="btn" href="project_time_exchange.html">Back to PTX App</a>
           <a class="btn accent" href="#pilot">Jump to Pilot Recipe</a>
         </div>
