--- a/web_apps/tokyo_stadium_dicon_graph.html
+++ b/web_apps/tokyo_stadium_dicon_graph.html
@@ -31,6 +31,11 @@
       border-bottom:1px solid var(--border);
       background:linear-gradient(180deg, rgba(122,162,255,.14), rgba(122,162,255,0));
     }
+    .back-link{
+      display:inline-block;
+      margin-bottom:6px;
+      font-size:12px;
+    }
     header h1{margin:0; font-size:16px; letter-spacing:.2px;}
     header p{margin:6px 0 0; color:var(--muted); font-size:12px; max-width:1100px;}
     .panel{
@@ -140,6 +145,7 @@
 <body>
   <div class="app">
     <header>
+      <a class="back-link" href="../index.html">Back to Card Index</a>
       <h1>Tokyo Olympic Stadium (Japan National Stadium) — DiCon-aligned Knowledge Graph</h1>
       <p>
         Drag nodes to explore. Click a node to pin and see details; click empty space to clear.
