--- a/web_apps/interface_topology_sketch_v0.html
+++ b/web_apps/interface_topology_sketch_v0.html
@@ -44,6 +44,14 @@
     .title{
       display:flex; flex-direction:column; gap:6px;
     }
+    .back-link{
+      font-size:12.5px;
+      color:var(--accent);
+      text-decoration:none;
+    }
+    .back-link:hover{
+      text-decoration:underline;
+    }
     .title h1{
       margin:0;
       font-size:18px;
@@ -249,6 +257,7 @@
 <body>
 <header>
   <div class="title">
+    <a class="back-link" href="../index.html">Back to Card Index</a>
     <h1>Interface Topology Sketch (v0) — Control Centre Site with Canal / Road Bridge / Rail Viaduct / OHL / Mine</h1>
     <div class="subtitle">
       Conceptual geometry/topology only: a triangular site bounded by a <b>canal (south)</b>, a <b>road on the west</b> (crossing the canal), and a <b>railway alignment NW→SE</b> along the hypotenuse, carried on <b>viaduct</b>. Under the site: <b>mining passage</b> at depth; above: <b>high voltage overhead line</b> N→S.
