Add monotone co-design rail app to index

--- a/web_apps/monotone_codesign_rail.html
+++ b/web_apps/monotone_codesign_rail.html
@@ -250,6 +250,7 @@
   <div class="subtitle">
     A director-level “portfolio cockpit” that treats <span class="k">platform length</span>, <span class="k">signalling headway</span>, and <span class="k">traction power</span> as a <i>single</i> monotone co-design problem: move the sliders, and the tool returns the <span class="m">antichain</span> (Pareto set) of minimal <code>&lt;capex, schedule, political-risk&gt;</code> plans plus an optional monotone feedback loop for “integration rework blow‑up” when tiers drift.
   </div>
+  <p><a href="../index.html">Back to Card Index</a></p>
 </header>
 
 <div class="grid">
