Add climate megaproject app to index

--- a/web_apps/climate_megaproject_sdam.html
+++ b/web_apps/climate_megaproject_sdam.html
@@ -31,6 +31,7 @@ button.secondary{background:#fff; color:#111;}
 <header>
   <h1>Sequential Decision Analytics for a Climate Engineering Megaproject (Powell-style SDAM + simulations)</h1>
   <div class="small">Self-contained interactive report generated locally (Plotly embedded).</div>
+  <div class="small"><a href="../index.html">Back to Card Index</a></div>
 </header>
 
 <main>
